Added a simple exampe how to use the contact form (using JS and PHP)
 - to set an email see `handler.php`

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <p class="lead main text-center">Reserve your table &amp; enjoy lorem Ipsum</p>
         <div class="row">
             <div class="col-md-6">
-                <form class="form form-table" method="post" name="">
+                <form class="form form-table" method="post" role="form" id="reused_form" name="">
                     <div class="form-group">
                         <h4>Fill the form for table reservation (all fields required)</h4>
                     </div>
@@ -581,5 +581,7 @@
         crossorigin="anonymous"></script>
 
 <script src="js/main.js"></script>
+<script src="js/form.js"></script>
+
 </body>
 </html>
